@@ -71,7 +71,7 @@ test winClipboard-1.5 {TkSelGetSelection & TkWinClipboardRender} -constraints {
     list [selection get -selection CLIPBOARD] [testclipboard]
 } -cleanup {
     clipboard clear
-} -result [list "line 1\u00c7\nline 2" [bytestring "line 1\u00c7\r\nline 2"]]
+} -result [list "line 1\u00c7\nline 2" "line 1\u00c7\r\nline 2"]
 
 
 test winClipboard-2.1 {TkSelUpdateClipboard reentrancy problem} -constraints {
